add plaintext with hint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     \nI am fascinated with the possibilities that these technologies
     \ngenerate for business, using python, R, PowerBI and
     \npresentation of dashboards.</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
 </resources>
