--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     \ngenerate for business, using python, R, PowerBI and
     \npresentation of dashboards.</string>
     <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">DONE</string>
 </resources>
